--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "eslint": "^5.4.0",
     "eslint-plugin-react": "^7.11.1",
-    "webpack": "^4.17.0"
+    "webpack": "^4.17.0",
+    "webpack-cli": "^3.1.0"
   }
 }
