--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "json-loader": "^0.5.7",
     "mongodb": "^3.1.3",
     "nodemon": "^1.18.3",
     "react": "^16.4.2",
