--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "json-loader": "^0.5.7",
     "mongodb": "^3.1.3",
+    "node-sass-middleware": "^0.11.0",
     "nodemon": "^1.18.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
